--- a/basketball.html
+++ b/basketball.html
@@ -171,6 +171,6 @@ The NBA is an active member of USA Basketball (USAB),[5] which is recognized by 
 </div>
 <br>
 <br>
-<footer align="center">Copyright by &Toni Culic</footer>
+<footer align="center">Copyright by &Travis Culina</footer>
 </body>
 </html>
